test/error/iocheck/err5.rzy
// Error: response is not allowed to output

Err5 = Elementary
  event : signal();
    
  bar = procedure()
    event();
  end
  
  foo = procedure()
    bar();
  end
  
  what : response():R{0,100}
    foo();
    return 0;
  end
  
end

